Display associated collections on show pages

--- a/app/views/user_templates/show.html.erb
+++ b/app/views/user_templates/show.html.erb
@@ -62,5 +62,45 @@
 </div>
 
 <!-- Show Page Customization starts -->
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "user_templates/user_photos" %>
+  </div>
+</div>
 
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "user_templates/user_likes" %>
+  </div>
+</div>
+
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "user_templates/user_obsessions_sent" %>
+  </div>
+</div>
+
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "user_templates/user_obsessions_received" %>
+  </div>
+</div>
+
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "user_templates/user_feeds" %>
+  </div>
+</div>
+
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "user_templates/user_victims" %>
+  </div>
+</div>
+
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "user_templates/user_stalkers" %>
+  </div>
+</div>
 <!-- Show Page Customization end -->
