--- a/app/views/photo_templates/show.html.erb
+++ b/app/views/photo_templates/show.html.erb
@@ -60,5 +60,15 @@
 </div>
 
 <!-- Show Page Customization starts -->
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "photo_templates/photo_likes" %>
+  </div>
+</div>
 
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <%= render partial: "photo_templates/photo_stalkers" %>
+  </div>
+</div>
 <!-- Show Page Customization end -->
