Replace raw foreign key value in likes with primary descriptors

--- a/app/views/like_templates/index.html.erb
+++ b/app/views/like_templates/index.html.erb
@@ -58,7 +58,7 @@
 
         <!-- Display like.users_id start -->
         <td>
-          <%= like.users_id %>
+          <%= like.users.email %>
         </td>
         <!-- Display like.users_id end -->
 
