Automatically associate photo to signed in user

--- a/app/views/photo_templates/new_form_with_errors.html.erb
+++ b/app/views/photo_templates/new_form_with_errors.html.erb
@@ -21,15 +21,9 @@
 <!-- Form photo end -->
 
   <!-- Label and input for users_id start -->
-  <div class="form-group">
-    <label for="users_id">
-      Users
-    </label>
-
-    <!-- Input for users_id start -->
-    <%= select_tag(:users_id, options_from_collection_for_select(User.all, :id, :email, @photo.users_id), :class => "form-control") %>
-    <!-- Input for users_id end -->
-  </div>
+  <!-- Input for "users_id" start -->
+  <input type="hidden" name="users_id" value="<%= current_user.id %>">
+  <!-- Input for "users_id" end -->
   <!-- Label and input for users_id end -->
 
   <button class="btn btn-block btn-outline-secondary">
