--- a/app/views/like_templates/index.html.erb
+++ b/app/views/like_templates/index.html.erb
@@ -64,7 +64,7 @@
 
         <!-- Display like.photos_id start -->
         <td>
-          <%= like.photos_id %>
+          <%= like.photos.users_id %>
         </td>
         <!-- Display like.photos_id end -->
 
