--- a/app/views/photo_templates/new_form.html.erb
+++ b/app/views/photo_templates/new_form.html.erb
@@ -16,7 +16,7 @@
     </label>
 
     <!-- Input for users_id start -->
-    <input type="text" id="users_id" name="users_id" class="form-control">
+    <%= select_tag(:users_id, options_from_collection_for_select(User.all, :id, :email, @photo.users_id), :class => "form-control") %>
     <!-- Input for users_id end -->
   </div>
   <!-- Label and input for users_id end -->
