Replace raw foreign key value in obsessions with primary descriptors

--- a/app/views/obsession_templates/index.html.erb
+++ b/app/views/obsession_templates/index.html.erb
@@ -58,7 +58,7 @@
 
         <!-- Display obsession.stalker_id start -->
         <td>
-          <%= obsession.stalker_id %>
+          <%= obsession.stalker.email %>
         </td>
         <!-- Display obsession.stalker_id end -->
 
