Replace raw foreign key value in photos with primary descriptors

--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -54,7 +54,7 @@
 
         <!-- Display photo.users_id start -->
         <td>
-          <%= photo.users_id %>
+          <%= photo.users.email %>
         </td>
         <!-- Display photo.users_id end -->
 
