Replace foreign key text inputs in likes with dropdowns

--- a/app/views/like_templates/new_form_with_errors.html.erb
+++ b/app/views/like_templates/new_form_with_errors.html.erb
@@ -39,7 +39,7 @@
     </label>
 
     <!-- Input for photos_id start -->
-    <input type="text" id="photos_id" name="photos_id" class="form-control" value="<%= @like.photos_id %>">
+    <%= select_tag(:photos_id, options_from_collection_for_select(Photo.all, :id, :users_id, @like.photos_id), :class => "form-control") %>
     <!-- Input for photos_id end -->
   </div>
   <!-- Label and input for photos_id end -->
