Replace raw foreign key value in obsessions with primary descriptors

--- a/app/views/obsession_templates/index.html.erb
+++ b/app/views/obsession_templates/index.html.erb
@@ -64,7 +64,7 @@
 
         <!-- Display obsession.victim_id start -->
         <td>
-          <%= obsession.victim_id %>
+          <%= obsession.victim.email %>
         </td>
         <!-- Display obsession.victim_id end -->
 
